Added reddit modules, updated boiler, updated readme.

--- a/scss/_burger.scss
+++ b/scss/_burger.scss
@@ -43,13 +43,13 @@
 // MODULES
 
 // Boiler
-@import 'modules/boiler';
+@import 'modules/boiler/boileraosidjaoisjdoaijsdoij';
 
 // Drupal
-/* @import 'modules/drupal'; */
+/* @import 'modules/drupal/drupal'; */
 
 // Ionic
-/* @import 'modules/ionic'; */
+/* @import 'modules/ionic/ionic'; */
 
 // Wordpress
-/* @import 'modules/wordpress'; */
+/* @import 'modules/wordpress/wordpress'; */
