Updated components, added elements, updated vars.

--- a/scss/base/_float-grid.scss
+++ b/scss/base/_float-grid.scss
@@ -10,7 +10,7 @@ $col-widths: ();
         $w: ($j/$i);
 
         @if not index($col-widths, $w) {
-            .col-#{$j}-#{$i} {
+            .column-#{$j}-#{$i} {
                 width: $w * 100%;
                 padding:$grid-column-gutter;
             }
