--- a/scss/_burger.scss
+++ b/scss/_burger.scss
@@ -11,7 +11,19 @@
 @import 'base/mixins';
 @import 'base/global';
 @import 'base/functions';
-/* @import 'base/float-grid'; */ // Float Grid
+@import 'base/reset';
+@import 'base/float-grid'; // Float Grid
+
+// Vars
+@import 'vars/animations';
+@import 'vars/colors';
+@import 'vars/dimensions';
+@import 'vars/fonts';
+@import 'vars/images';
+@import 'vars/layout';
+@import 'vars/positioning';
+@import 'vars/settings';
+
 
 // Layout
 @import 'layout/single'; // Splash or one page layout
@@ -43,7 +55,7 @@
 // MODULES
 
 // Boiler
-@import 'modules/boiler/boileraosidjaoisjdoaijsdoij';
+@import 'modules/boiler/boiler';
 
 // Drupal
 /* @import 'modules/drupal/drupal'; */
