--- a/scss/libs/_flex-grid.scss
+++ b/scss/libs/_flex-grid.scss
@@ -24,7 +24,7 @@ $fg-columns: 12 !default;
 $fg-gutter: 0.5rem !default;
 
 $fg-class-row: 'row' !default;
-$fg-class-col: 'col' !default;
+$fg-class-col: 'column' !default;
 $fg-class-off: 'off' !default;
 
 
