--- a/scss/libs/_flex.scss
+++ b/scss/libs/_flex.scss
@@ -405,7 +405,7 @@
 	display:$set-flex;
 	-webkit-flex-direction: $set-flex;
 	-moz-flex-direction: $set-flex;
-	flex-direction:$direction
+	flex-direction:$direction;
 	-webkit-align-items: center;
 	-moz-align-items: center;
 	align-items: center;
