--- a/scss/vars/_colors.scss
+++ b/scss/vars/_colors.scss
@@ -19,17 +19,17 @@ $insta-blue: #455b84;
 $walmart-blue: #007cc2;
 
 //-body
-$body-bg-color: $mg-black;
-$body-text-color: $mg-black;
+$body-bg-color: $black;
+$body-text-color: $black;
 $backdrop: rgba(0, 0, 0, 0.65);
 
 //-global link
-$link-color: $mg-white;
-$link-hover: $mg-grey;
+$link-color: $white;
+$link-hover: $grey;
 
 //-nav
 $nav-bg-color: transparent;
-$nav-link-color: $mg-white;
+$nav-link-color: $white;
 $nav-li-bg-color: transparent;
 
 //-logo text color
@@ -37,76 +37,76 @@ $logo-color: null;
 
 //-headings
 $heading-color: null;
-$h1-color: $mg-white;
-$h2-color: $mg-white;
-$h3-color: $mg-white;
-$h4-color: $mg-white;
-$h5-color: $mg-white;
-$h6-color: $mg-white;
+$h1-color: $white;
+$h2-color: $white;
+$h3-color: $white;
+$h4-color: $white;
+$h5-color: $white;
+$h6-color: $white;
 
 //-header
-$header-bg-color: $mg-black;
-$header-text-color: $mg-white;
+$header-bg-color: $black;
+$header-text-color: $white;
 $header-link-color: $link-color;
 $header-link-hover: $link-hover;
 
 //-mobile nav
-$mobile-nav-color: $mg-black;
+$mobile-nav-color: $black;
 $mobile-nav-link-color: $link-color;
 $mobile-nav-link-hover: $link-hover;
 
 
 //-hero
-$hero-bg-color: $mg-blue;
-$hero-text-color: $mg-white;
+$hero-bg-color: $blue;
+$hero-text-color: $white;
 
 //-main
 $main-bg-color: transparent;
-$main-text-color: $mg-white;
+$main-text-color: $white;
 $main-link-color: $link-color;
 $main-link-hover: $link-hover;
 
 //-section
-$section-bg-color: $mg-black;
-$section-text-color: $mg-white;
+$section-bg-color: $black;
+$section-text-color: $white;
 $section-link-color: $link-color;
 $section-link-hover: $link-hover;
 
 //-article
-$article-bg-color: $mg-black;
-$article-text-color: $mg-white;
+$article-bg-color: $black;
+$article-text-color: $white;
 $article-link-color: $link-color;
 $article-link-hover: $link-hover;
 
 //-footer
 $footer-bg-color: transparent;
-$footer-text-color: $mg-white;
+$footer-text-color: $white;
 $footer-link-color: $link-color;
 $footer-link-hover: $link-hover;
 
 //-sidebar
-$sidebar-bg-color: $mg-black;
-$sidebar-text-color: $mg-white;
+$sidebar-bg-color: $black;
+$sidebar-text-color: $white;
 $sidebar-link-color: $link-color;
 $sidebar-link-hover: $link-hover;
 
 //-buttons
-$btn-text-color: $mg-black;
+$btn-text-color: $black;
 $btn-border-size: 2px;
 $btn-border-style: solid;
 $btn-border-color: transparent;
 
 //-buttons mapping
 $btn-colors: (
-  btn-black: $mg-black,
-  btn-blue: $mg-blue,
-  btn-white: $mg-white,
-  btn-grey: $mg-grey,
-  btn-pink: $mg-pink,
-  btn-red: $mg-red,
-  btn-yellow: $mg-yellow,
-  btn-purple: $mg-purple,
-  btn-orange: $mg-orange
+  btn-black: $black,
+  btn-blue: $blue,
+  btn-white: $white,
+  btn-grey: $grey,
+  btn-pink: $pink,
+  btn-red: $red,
+  btn-yellow: $yellow,
+  btn-purple: $purple,
+  btn-orange: $orange
 );
 
 @each $btn-color, $color in $btn-colors {
@@ -116,26 +116,26 @@ $btn-colors: (
 }
 
 //-social icons
-$social-bg-color: $mg-white;
-$social-text-color: $mg-black;
-$social-hover-color: $mg-blue;
+$social-bg-color: $white;
+$social-text-color: $black;
+$social-hover-color: $blue;
 
 //-table
-$table-header-color: $mg-white;
-$table-th-bg: $mg-white;
+$table-header-color: $white;
+$table-th-bg: $white;
 
-$table-tr-bg: $mg-white;
-$table-tr-color: $mg-black;
+$table-tr-bg: $white;
+$table-tr-color: $black;
 
-$table-tr-odd-bg: $mg-grey;
-$table-tr-odd-color: $mg-white;
+$table-tr-odd-bg: $grey;
+$table-tr-odd-color: $white;
 
 
 //-code
 $code-bg-color: rgba(193, 199, 208, .3);
 
 //-form
-$input-border: $mg-grey;
-$error-border: $mg-red;
+$input-border: $grey;
+$error-border: $red;
 $error-bg: $light-grey;
-$modal-bg-color: $mg-white;
+$modal-bg-color: $white;
