--- a/scss/modules/ionic/ionic.scss
+++ b/scss/modules/ionic/ionic.scss
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-@import
+/* @import
   // Ionicons
   "ionicons/ionicons.scss",
 
@@ -51,3 +51,4 @@
   // Animations
   "animations",
   "transitions";
+ */
