--- a/scss/vars/_fonts.scss
+++ b/scss/vars/_fonts.scss
@@ -4,6 +4,7 @@
 
 @import url('//fonts.googleapis.com/css?family=Open+Sans:400,700,800,300');
 @import url('//fonts.googleapis.com/css?family=Lato');
+@import url('https://fonts.googleapis.com/css?family=Raleway');
 
 //-font family
 $sans: 'Helvetica Neue',Helvetica,Arial,sans-serif;
@@ -45,7 +46,6 @@ $article-font: $default-font;
 //-nav
 $nav-fsz: 14px;
 $nav-fw: 'normal';
-$nav-link-font: $default-font;
 
 //-mobile nav
 $mobile-nav-fsz: 20px;
