Updated cards styles, content starter, colors.

--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -1,1 +1,24 @@
 // cards
+
+
+.card {
+  margin:4em 0 5em;
+  background: $color__node-bg;
+  padding: 2em 0;
+  p {
+    text-align: center;
+    color: $color__text;
+  }
+  h2 {
+    color: $color__text;
+    text-align: center;
+  }
+  ul {
+    text-align: center;
+    margin: 1em auto 0;
+    color: $color__text;
+    li {
+      margin: 0 1em;
+    }
+  }
+}
