--- a/scss/vars/_colors.scss
+++ b/scss/vars/_colors.scss
@@ -29,7 +29,7 @@ $palettes: (
       header-bg: #000,
       sidebar-bg: transparent,
       content-bg: transparent,
-      node-bg: #fff,
+      node-bg: #5d9e47,
       footer-bg: #000
     ),
     dark: (
