--- a/scss/modules/reddit/modules/_flair.scss
+++ b/scss/modules/reddit/modules/_flair.scss
@@ -48,7 +48,7 @@
 		vertical-align: middle;
 		border: 0;
 		border-radius: 0;
-		background:transparent url('%%flair%%') no-repeat;
+		/* background:transparent url('%%flair%%') no-repeat; */
 		width: 38px;
 		height: 20px;
 		content: "";
@@ -251,7 +251,7 @@
 		width:19px;
 		height:19px;
 		background-repeat:no-repeat;
-		background-image: url(%%allteamflair%%);
+		/* background-image: url(%%allteamflair%%); */
 		vertical-align: middle;
 		background-position: -20px -1155px;
 	}
@@ -259,7 +259,7 @@
 		width:18px;
 		height:18px;
 		background-repeat:no-repeat;
-		background-image: url(%%allteamflair%%);
+		/* background-image: url(%%allteamflair%%); */
 		vertical-align: middle;
 		background-position: -20px -1177px;
 	}
@@ -267,7 +267,7 @@
 		width:18px;
 		height:17px;
 		background-repeat:no-repeat;
-		background-image: url(%%allteamflair%%);
+		/* background-image: url(%%allteamflair%%); */
 		vertical-align: middle;
 		background-position: -20px -1199px;
 	}
@@ -275,7 +275,7 @@
 		width:18px;
 		height:17px;
 		background-repeat:no-repeat;
-		background-image: url(%%allteamflair%%);
+		/* background-image: url(%%allteamflair%%); */
 		vertical-align: middle;
 		background-position: -20px -1221px;
 	}
@@ -283,7 +283,7 @@
 		width:19px;
 		height:19px;
 		background-repeat:no-repeat;
-		background-image: url(%%allteamflair%%);
+		/* background-image: url(%%allteamflair%%); */
 		vertical-align: middle;
 		background-position: -20px -1241px;
 	}
@@ -294,7 +294,7 @@
 		width:19px;
 		height:19px;
 		background-repeat:no-repeat;
-		background-image: url(%%allteamflair%%);
+		/* background-image: url(%%allteamflair%%); */
 		vertical-align: middle;
 		background-position: -84px -735px;
 	}
@@ -303,7 +303,7 @@
 		width:19px;
 		height:19px;
 		background-repeat:no-repeat;
-		background-image: url(%%nhl%%);
+		/* background-image: url(%%nhl%%); */
 		vertical-align: middle;
 		background-position: 0px 0px;
 	}
@@ -311,7 +311,7 @@
 		width:19px;
 		height:19px;
 		background-repeat:no-repeat;
-		background-image: url(%%allteamflair%%);
+		/* background-image: url(%%allteamflair%%); */
 		vertical-align: middle;
 		background-position: 0px -1701px;
 	}
@@ -319,7 +319,7 @@
 		width:19px;
 		height:19px;
 		background-repeat:no-repeat;
-		background-image: url(%%allteamflair%%);
+		/* background-image: url(%%allteamflair%%); */
 		vertical-align: middle;
 		background-position: 0px -1785px;
 	}
@@ -327,7 +327,7 @@
 		width:19px;
 		height:19px;
 		background-repeat:no-repeat;
-		background-image: url(%%allteamflair%%);
+		/* background-image: url(%%allteamflair%%); */
 		vertical-align: middle;
 		background-position: 0px -1932px;
 	}
@@ -335,7 +335,7 @@
 		width:19px;
 		height:19px;
 		background-repeat:no-repeat;
-		background-image: url(%%allteamflair%%);
+		/* background-image: url(%%allteamflair%%); */
 		vertical-align: middle;
 		background-position: 0px -1995px;
 	}
@@ -343,7 +343,7 @@
 		width:19px;
 		height:19px;
 		background-repeat:no-repeat;
-		background-image: url(%%allteamflair%%);
+		/* background-image: url(%%allteamflair%%); */
 		vertical-align: middle;
 		background-position: -21px -42px;
 	}
@@ -351,7 +351,7 @@
 		width:19px;
 		height:19px;
 		background-repeat:no-repeat;
-		background-image: url(%%allteamflair%%);
+		/* background-image: url(%%allteamflair%%); */
 		vertical-align: middle;
 		background-position: -21px -84px;
 	}
@@ -359,7 +359,7 @@
 		width:19px;
 		height:19px;
 		background-repeat:no-repeat;
-		background-image: url(%%allteamflair%%);
+		/* background-image: url(%%allteamflair%%); */
 		vertical-align: middle;
 		background-position: -21px -168px;
 	}
@@ -367,7 +367,7 @@
 		width:19px;
 		height:19px;
 		background-repeat:no-repeat;
-		background-image: url(%%allteamflair%%);
+		/* background-image: url(%%allteamflair%%); */
 		vertical-align: middle;
 		background-position: -21px -210px;
 	}
@@ -375,7 +375,7 @@
 		width:19px;
 		height:19px;
 		background-repeat:no-repeat;
-		background-image: url(%%allteamflair%%);
+		/* background-image: url(%%allteamflair%%); */
 		vertical-align: middle;
 		background-position: -83px -712px;
 	}
@@ -383,7 +383,7 @@
 		width:19px;
 		height:19px;
 		background-repeat:no-repeat;
-		background-image: url(%%allteamflair%%);
+		/* background-image: url(%%allteamflair%%); */
 		vertical-align: middle;
 		background-position: -21px -357px;
 	}
@@ -391,7 +391,7 @@
 		width:19px;
 		height:19px;
 		background-repeat:no-repeat;
-		background-image: url(%%allteamflair%%);
+		/* background-image: url(%%allteamflair%%); */
 		vertical-align: middle;
 		background-position: -21px -441px;
 	}
@@ -399,7 +399,7 @@
 		width:19px;
 		height:19px;
 		background-repeat:no-repeat;
-		background-image: url(%%allteamflair%%);
+		/* background-image: url(%%allteamflair%%); */
 		vertical-align: middle;
 		background-position: -21px -546px;
 	}
@@ -407,7 +407,7 @@
 		width:19px;
 		height:19px;
 		background-repeat:no-repeat;
-		background-image: url(%%allteamflair%%);
+		/* background-image: url(%%allteamflair%%); */
 		vertical-align: middle;
 		background-position: -21px -567px;
 	}
@@ -415,7 +415,7 @@
 		width:19px;
 		height:19px;
 		background-repeat:no-repeat;
-		background-image: url(%%allteamflair%%);
+		/* background-image: url(%%allteamflair%%); */
 		vertical-align: middle;
 		background-position: -21px -735px;
 	}
@@ -423,7 +423,7 @@
 		width:19px;
 		height:19px;
 		background-repeat:no-repeat;
-		background-image: url(%%allteamflair%%);
+		/* background-image: url(%%allteamflair%%); */
 		vertical-align: middle;
 		background-position: -21px -798px;
 	}
@@ -431,7 +431,7 @@
 		width:19px;
 		height:19px;
 		background-repeat:no-repeat;
-		background-image: url(%%allteamflair%%);
+		/* background-image: url(%%allteamflair%%); */
 		vertical-align: middle;
 		background-position: -21px -987px;
 	}
@@ -439,7 +439,7 @@
 		width:19px;
 		height:19px;
 		background-repeat:no-repeat;
-		background-image: url(%%allteamflair%%);
+		/* background-image: url(%%allteamflair%%); */
 		vertical-align: middle;
 		background-position: -21px -1050px;
 	}
@@ -447,7 +447,7 @@
 		width:19px;
 		height:19px;
 		background-repeat:no-repeat;
-		background-image: url(%%allteamflair%%);
+		/* background-image: url(%%allteamflair%%); */
 		vertical-align: middle;
 		background-position: -21px -1092px;
 	}
@@ -455,7 +455,7 @@
 		width:19px;
 		height:19px;
 		background-repeat:no-repeat;
-		background-image: url(%%allteamflair%%);
+		/* background-image: url(%%allteamflair%%); */
 		vertical-align: middle;
 		background-position: -21px -1491px;
 	}
@@ -463,7 +463,7 @@
 		width:19px;
 		height:19px;
 		background-repeat:no-repeat;
-		background-image: url(%%allteamflair%%);
+		/* background-image: url(%%allteamflair%%); */
 		vertical-align: middle;
 		background-position: -21px -1575px;
 	}
@@ -471,7 +471,7 @@
 		width:19px;
 		height:19px;
 		background-repeat:no-repeat;
-		background-image: url(%%allteamflair%%);
+		/* background-image: url(%%allteamflair%%); */
 		vertical-align: middle;
 		background-position: -21px -1596px;
 	}
@@ -479,7 +479,7 @@
 		width:19px;
 		height:19px;
 		background-repeat:no-repeat;
-		background-image: url(%%allteamflair%%);
+		/* background-image: url(%%allteamflair%%); */
 		vertical-align: middle;
 		background-position: -21px -1721px;
 	}
@@ -487,7 +487,7 @@
 		width:19px;
 		height:19px;
 		background-repeat:no-repeat;
-		background-image: url(%%allteamflair%%);
+		/* background-image: url(%%allteamflair%%); */
 		vertical-align: middle;
 		background-position: -21px -1827px;
 	}
@@ -495,7 +495,7 @@
 		width:19px;
 		height:19px;
 		background-repeat:no-repeat;
-		background-image: url(%%allteamflair%%);
+		/* background-image: url(%%allteamflair%%); */
 		vertical-align: middle;
 		background-position: -21px -1911px;
 	}
@@ -503,7 +503,7 @@
 		width:19px;
 		height:19px;
 		background-repeat:no-repeat;
-		background-image: url(%%allteamflair%%);
+		/* background-image: url(%%allteamflair%%); */
 		vertical-align: middle;
 		background-position: -42px 0px;
 	}
@@ -511,7 +511,7 @@
 		width:19px;
 		height:19px;
 		background-repeat:no-repeat;
-		background-image: url(%%allteamflair%%);
+		/* background-image: url(%%allteamflair%%); */
 		vertical-align: middle;
 		background-position: -42px -105px;
 	}
@@ -519,7 +519,7 @@
 		width:19px;
 		height:19px;
 		background-repeat:no-repeat;
-		background-image: url(%%allteamflair%%);
+		/* background-image: url(%%allteamflair%%); */
 		vertical-align: middle;
 		background-position: -42px -210px;
 	}
@@ -527,7 +527,7 @@
 		width:19px;
 		height:19px;
 		background-repeat:no-repeat;
-		background-image: url(%%allteamflair%%);
+		/* background-image: url(%%allteamflair%%); */
 		vertical-align: middle;
 		background-position: -42px -336px;
 	}
@@ -535,7 +535,7 @@
 		width:19px;
 		height:19px;
 		background-repeat:no-repeat;
-		background-image: url(%%allteamflair%%);
+		/* background-image: url(%%allteamflair%%); */
 		vertical-align: middle;
 		background-position: -42px -420px;
 	}
@@ -559,7 +559,7 @@ a[href="http://www.msgnetworks.com"] {
 
 a[href="/r/anaheimducks"]:before,  a[href="/r/bostonbruins"]:before,  a[href="/r/sabres"]:before,  a[href="/r/calgaryflames"]:before,  a[href="/r/canes"]:before,  a[href="/r/hawks"]:before,  a[href="/r/coloradoavalanche"]:before,  a[href="/r/bluejackets"]:before,  a[href="/r/dallasstars"]:before,  a[href="/r/detroitredwings"]:before,  a[href="/r/edmontonoilers"]:before,  a[href="/r/floridapanthers"]:before,  a[href="/r/losangeleskings"]:before,  a[href="/r/wildhockey"]:before,  a[href="/r/habs"]:before,  a[href="/r/predators"]:before,  a[href="/r/devils"]:before,  a[href="/r/newyorkislanders"]:before,  a[href="/r/rangers"]:before,  a[href="/r/ottawasenators"]:before,  a[href="/r/flyers"]:before,  a[href="/r/coyotes"]:before,  a[href="/r/penguins"]:before,  a[href="/r/sanjosesharks"]:before,  a[href="/r/stlouisblues"]:before,  a[href="/r/tampabaylightning"]:before,  a[href="/r/leafs"]:before,  a[href="/r/atlantathrashers"]:before,  a[href="/r/canucks"]:before,  a[href="/r/caps"]:before,  a[href="/r/winnipegjets"]:before,  a[href="/r/austria"]:before,  a[href="/r/teamcanada"]:before,  a[href="/r/czech"]:before,  a[href="/r/denmark"]:before,  a[href="/r/finland"]:before,  a[href="/r/unitedkingdom"]:before,  a[href="/r/japan"]:before,  a[href="/r/norway"]:before,  a[href="/r/latvia"]:before,  a[href="/r/russia"]:before,  a[href="/r/slovakia"]:before,  a[href="/r/slovenia"]:before,  a[href="/r/sweden"]:before,  a[href="/r/switzerland"]:before,  a[href="/r/usahockey"]:before,  a[href="/r/france"]:before,  a[href="/r/italy"]:before,  a[href="/r/kazakhstan"]:before,  a[href="/r/belgium"]:before,  a[href="/r/belarus"]:before,  a[href="/r/germany"]:before
 {
-	background-image: url($all-teams-flair);
+	/* background-image: url($all-teams-flair); */
 	width: 25px;
 	height: 25px;
 	display: inline-block;
