--- a/scss/modules/reddit/modules/_links.scss
+++ b/scss/modules/reddit/modules/_links.scss
@@ -20,7 +20,7 @@
   background-position: 0px 1px;
 }
 .midcol {
-  @include transition-all(0.7s);
+  /* @include transition-all(0.7s); */
 }
 
 .arrow.down:after {
