--- a/scss/modules/reddit/modules/_slide-menu.scss
+++ b/scss/modules/reddit/modules/_slide-menu.scss
@@ -1,4 +1,5 @@
 //-left menu
+$header-height: 145px;
 .side {
   h5 {
     position:fixed;
@@ -14,7 +15,7 @@
     text-decoration:none;
     border: none;
     padding:10px 10px 10px 42px;
-    @include transition-all(0.75s);
+    /* @include transition-all(0.75s); */
     &:before {
       content:' ';
       background-image: url($all-teams-flair);
@@ -32,7 +33,7 @@
     }
     a {
       opacity:0.65;
-      @include transition-all(0.70s);
+      /* @include transition-all(0.70s); */
       cursor:pointer;
       &:hover {
         opacity:1;
