--- a/scss/base/_mixins.scss
+++ b/scss/base/_mixins.scss
@@ -21,6 +21,40 @@
   }
 }
 
+/// Fluidly scale properties based on viewport units
+/// @param {String} $property - These are the only mandatory arguments. Property can be any css property that accepts calc(), viewport units and pixels, ie. Most properties… height/width/padding/font-size etc.
+/// @param {Number} $min - Minimum value of the property
+/// @param {Number} $max - Max value of the property
+/// @param {Number} $start [320] - Beginning breakpoint
+/// @param {Number} $end [1400] - Ending breakpoint
+/// @param {Boolean} $clip [true] - By default, the mixin will prevent the value from decreasing or increasing past the $start or $end. To disable this, either pass $clip: false to disable both directions.
+/// @param {Boolean} $clipAtStart [true] - To disable clipping past $start breakpoint set to false.
+/// @param {Boolean} $clipAtEnd [true] - To disable clipping past $end breakpoint set to false.
+/// @link http://www.adrenalinmedia.com.au/the-agency/insights/this-changes-everything-css-fluid-properties.aspx
+/// @example
+/// // 50px at 320 fluidly scaling up to 100px at 1920
+/// h1 {
+  /// @include fp(font-size, 50, 100)
+/// }
+
+@mixin fp($property, $min, $max, $start: 320, $end: 1400, $clip: true, $clipAtStart: true, $clipAtEnd: true) {
+  $multiplier: ($max - $min) / ($end - $start) * 100;
+  $adder: ($min * $end - $max * $start) / ($end - $start);
+  $formula: calc(#{$multiplier + 0vw} + #{$adder + 0px});
+  @if $clip and $clipAtStart {
+    @media (max-width: #{$start + 0px}) {
+      #{$property}: $min + 0px;
+    }
+  }
+  @if $clip and $clipAtEnd {
+    @media (min-width: #{$end + 0px}) {
+      #{$property}: $max + 0px;
+    }
+  }
+  #{$property}: $formula;
+}
+
+
 
 /// Shorthand for positioning.
 /// @param {String} $type - Position type (either absolute, fixed or relative)
