--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -4,7 +4,7 @@
 .card {
   margin:4em 0 5em;
   background: $color__node-bg;
-  padding: 2em 0;
+  padding: 2em 0 6em;
   p {
     text-align: center;
     color: $color__text;
