--- a/scss/modules/_docs.scss
+++ b/scss/modules/_docs.scss
@@ -7,12 +7,20 @@ body.docs {
     margin:1em auto;
     text-align: center;
   }
+  p span {
+    background:$white;
+    color:$red;
+    padding:0 0.15em;
+  }
+  h2 {
+    @include fp(font-size, 30, 70);
+  }
   h2, h3, h4 {
     margin: 1em 0;
   }
   header {
     @include flex-center(flex, column);
-    height:750px;
+    height:100vh;
     text-align: center;
   }
 
